# llvm-paraphrasing

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  setup.py
.github/workflows/: pythonapp.yml
Normalization-pass/: .gitignore  CMakeLists.txt  README.md
Normalization-pass/Normalizer/: CMakeLists.txt  Normalizer.cpp
Reader/: CMakeLists.txt  Reader.cpp
bitcodes/: KeccakHash-strip-O2-renamed.ll  KeccakHash-strip-O3-renamed.ll  KeccakHash-strip-renamed.ll  KeccakP-1600-opt64-strip-O2-renamed.ll  KeccakP-1600-opt64-strip-O3-renamed.ll  KeccakP-1600-opt64-strip-renamed.ll  KeccakSponge-strip-O2-renamed.ll  KeccakSponge-strip-O3-renamed.ll  KeccakSponge-strip-renamed.ll  SAPI-strip-O2-renamed.ll  SAPI-strip-O3-renamed.ll  SAPI-strip-renamed.ll  TSRM-strip-O2-renamed.ll  TSRM-strip-O3-renamed.ll  TSRM-strip-renamed.ll  ZendAccelerator-strip-O2-renamed.ll  ZendAccelerator-strip-O3-renamed.ll  ZendAccelerator-strip-renamed.ll  a_eq_neg3_generic-strip-O2-renamed.ll  a_eq_neg3_generic-strip-O3-renamed.ll  a_eq_neg3_generic-strip-renamed.ll  abspath-strip-O2-renamed.ll  abspath-strip-O3-renamed.ll  abspath-strip-renamed.ll  acl-strip-O2-renamed.ll  acl-strip-O3-renamed.ll  acl-strip-renamed.ll  aclk_common-strip-O2-renamed.ll  aclk_common-strip-O3-renamed.ll  aclk_common-strip-renamed.ll  adaptive_resortable_list-strip-O2-renamed.ll  adaptive_resortable_list-strip-O3-renamed.ll  adaptive_resortable_list-strip-renamed.ll  add-interactive-strip-O2-renamed.ll  add-interactive-strip-O3-renamed.ll  add-interactive-strip-renamed.ll  add-patch-strip-O2-renamed.ll  add-patch-strip-O3-renamed.ll  add-patch-strip-renamed.ll  add-strip-O2-renamed.ll  (+3687 more)
llvm_paraphrasing/: assembly_parser.py  dataset2raw.py  preprocess.py  restore.py  split_train.py  store.py  utils.py
test/: test_parse.py  test_store.py
train/: tokenizer.py  train-lm.py
